# nsb

./: .gitignore  Makefile.am  README.md  apply.sh  autogen.sh  configure.ac
common/: scm.c  scm.h
docs/: manual-mode.md
generator/: binfile.py  binpatch.py  build_id.py  check.py  consts.py  debuginfo.py  elffile.py  funcjump.py  funcpatch.py  function.py  generate.py  main.py  marked_symbol.py  marked_symbol_debuginfo.py  ms_debuginfo.py  nsbgen.py  patch_symbol.py  static.py  static_symbol.py  sym_resolver.py  util.py
include/: vzp.h
m4/: ac_python_module.m4
patcher/: Makefile.am  backtrace.c  dl_map.c  elf.c  log.c  main.c  patch.c  patch_static.c  process.c  protobuf.c  protobuf.h  relocations.c  rtld.c  service.c  util.c  vma.c  x86_64.c
patcher/compel/compel/: compel.h  infect-rpc.h  infect.h  ptrace.h
patcher/compel/compel/asm/: fpu.h  infect-types.h  sigframe.h
patcher/compel/compel/plugins/: plugin-fds.h
patcher/compel/compel/plugins/std/: syscall-64.h  syscall-codes-64.h  syscall-codes.h
patcher/include/: backtrace.h  compiler.h  context.h  dl_map.h  elf.h  list.h  log.h  patch.h  patch_static.h  process.h  protobuf.h  relocations.h  rtld.h  service.h  util.h  version.h  vma.h  x86_64.h  xmalloc.h
patcher/src/: Makefile  main.c  patch.c  protobuf.h
patchgen/: Makefile.am  binpatch.py  funcpatch.py  function.py  main.py
patchgen/protobuf/: Makefile.am
patchgen/samples/: sample_c.c  sample_e.c  waitsig.c  waitsig.h
patchgen/samples/.deps/: sample_a.Po  sample_b.Po  sample_c.Po  sample_d.Po  sample_e.Po  waitsig.Po
plugins/: Makefile.am  service.c  service.h
protobuf/: Makefile.am  binpatch.proto  datasym.proto  funcjump.proto  funcpatch.proto  markedsym.proto  objinfo.proto  relaplt.proto  segment.proto  staticsym.proto
samples/: Makefile.am  sample_a.c  sample_b.c  sample_cc.c  sample_e.c  waitsig.c
tests/: Makefile.am  TESTS_HOWTO  const_var.c  convert_test_types.py  ext_global_func.c  global_func.c  global_func_cb.c  global_func_cb_auto.c  global_func_cb_manual.c  global_func_p.c  global_var.c  global_var_addr.c  global_var_addr_auto.c  global_var_addr_manual.c  global_var_auto.c  global_var_manual.c  lib_global_func.c  lib_global_func_cb.c  lib_global_func_p.c  lib_global_var.c  lib_global_var_addend.c  lib_global_var_addr.c  lib_static_func.c  lib_static_func_cb.c  lib_static_var.c  library.c  main.c  sample_a_to_sample_b.py  sample_a_to_sample_c.py  sample_a_to_sample_f.py  sample_i.c  sample_j.c  static_func.c  static_func_auto.c  static_func_cb.c  static_func_manual.c  static_func_manual_v2.c  static_var.c  static_var_auto.c  static_var_manual.c  (+26 more)
